barn blocks bought from smiths